commit: fix message sending slow

--- a/fall-detector/src/main/res/navigation/navigation.xml
+++ b/fall-detector/src/main/res/navigation/navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/about"
-        android:name="altermarkive.guardian.About"
+        android:name="com.ethnicthv.About"
         android:label="@string/about"
         tools:layout="@layout/about" />
 
     <fragment
         android:id="@+id/signals"
-        android:name="altermarkive.guardian.Signals"
+        android:name="com.ethnicthv.Signals"
         android:label="@string/signals"
         tools:layout="@layout/signals" />
 
     <fragment
         android:id="@+id/settings"
-        android:name="altermarkive.guardian.Settings"
+        android:name="com.ethnicthv.Settings"
         android:label="@string/settings" />
 
 </navigation>
