--- a/fall-detector/src/main/res/layout/about.xml
+++ b/fall-detector/src/main/res/layout/about.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
-    tools:context="altermarkive.guardian.About">
+    tools:context="com.ethnicthv.About">
 
     <WebView
         android:id="@+id/information"
@@ -23,14 +23,30 @@
         android:padding="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/emergency"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/emergency_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:text="@string/emergency"
-        app:icon="@android:drawable/ic_dialog_alert" />
+        android:layout_gravity="center"
+        android:background="@drawable/top_corner_rounded_border"
+        android:paddingTop="10dp"
+        android:paddingBottom="1dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
+        >
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/emergency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:gravity="center"
+            android:text="@string/emergency"
+            app:icon="@android:drawable/ic_dialog_alert"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
