--- a/fall-detector/src/main/res/layout/eula.xml
+++ b/fall-detector/src/main/res/layout/eula.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/rounded_border"
+    android:padding="16dp"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -10,7 +11,9 @@
         android:id="@+id/eula"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.99" />
+        android:layout_weight="0.99">
+
+    </WebView>
 
     <Button
         android:id="@+id/accept"
