--- a/fall-detector/src/main/res/layout/signals.xml
+++ b/fall-detector/src/main/res/layout/signals.xml
@@ -6,7 +6,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
-    tools:context="altermarkive.guardian.Signals">
+    tools:context="com.ethnicthv.Signals">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
         android:layout_weight="1"
         android:background="@android:color/white">
 
-        <altermarkive.guardian.Surface
+        <com.ethnicthv.Surface
             android:id="@+id/surface"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
