--- a/fall-detector/src/main/res/drawable/top_corner_rounded_border.xml
+++ b/fall-detector/src/main/res/drawable/top_corner_rounded_border.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?android:attr/windowBackground" />
-    <corners
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp" />
-    <stroke
-        android:width="1dp"
-        android:color="?android:attr/windowBackground" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="@color/gray_600" />
+            <corners
+                android:bottomLeftRadius="0dp"
+                android:bottomRightRadius="0dp"
+                android:topLeftRadius="16dp"
+                android:topRightRadius="0dp" />
+        </shape>
+    </item>
+    <item>
+        <inset
+            android:insetRight="-4dp"
+            android:insetBottom="-4dp">
+
+            <shape>
+                <solid android:color="@color/gray_200" />
+                <corners
+                    android:bottomLeftRadius="16dp"
+                    android:bottomRightRadius="0dp"
+                    android:topLeftRadius="16dp"
+                    android:topRightRadius="0dp" />
+                <stroke
+
+                    android:width="4dp"
+                    android:color="@color/gray_600" />
+            </shape>
+        </inset>
+    </item>
+
+</layer-list>
