--- a/fall-detector/src/main/res/values/colors.xml
+++ b/fall-detector/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_200">#FFEEEEEE</color>
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
     <color name="gray_800">#FF424242</color>
