--- a/fall-detector/src/main/res/layout/about.xml
+++ b/fall-detector/src/main/res/layout/about.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_400"
+    android:background="@color/gray_300"
     android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
     tools:context="com.ethnicthv.About">
@@ -13,26 +13,43 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_weight="1"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/view"
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:paddingTop="20dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:cropToPadding="true"
+                android:outlineProvider="background"
+                android:requiresFadingEdge="horizontal|vertical"
+                android:src="@mipmap/ic_launcher_round" />
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="20dp"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="@dimen/large_title"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="100dp"
                 android:orientation="vertical"
-                android:padding="20dp"
-                android:layout_marginBottom="300dp">
+                android:padding="20dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -145,16 +162,16 @@
         </LinearLayout>
     </ScrollView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/emergency_wrapper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/top_corner_rounded_border"
-        android:paddingStart="10dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="1dp"
+        android:layout_marginStart="10dp"
+        android:clipToPadding="false"
+        android:isScrollContainer="false"
+        android:layoutDirection="ltr"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -164,12 +181,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="@string/emergency"
             app:icon="@android:drawable/ic_dialog_alert"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
