--- a/fall-detector/src/main/res/values/colors.xml
+++ b/fall-detector/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_200">#FFEEEEEE</color>
+    <color name="gray_300">#FF080838</color>
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
     <color name="gray_800">#FF424242</color>
